# JustPlug

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
include/: EmbedMetadata.cmake  confinfo.h  iplugin.h  plugininfo.h  pluginmanager.h  sharedlibrary.h
plugin/: PluginCommon.cmake
plugin/plugin_1/: CMakeLists.txt  main.cpp  meta.json
plugin/plugin_10/: CMakeLists.txt  main.cpp
plugin/plugin_2/: CMakeLists.txt  main.cpp  meta.json
plugin/plugin_3/: CMakeLists.txt  main.cpp
plugin/plugin_4/: CMakeLists.txt  main.cpp
plugin/plugin_5/: CMakeLists.txt  main.cpp  meta.json
plugin/plugin_6/: CMakeLists.txt  main.cpp
plugin/plugin_7/: CMakeLists.txt  main.cpp
plugin/plugin_8/: CMakeLists.txt  main.cpp
plugin/plugin_9/: CMakeLists.txt  main.cpp  meta.json
plugin/plugin_test/: CMakeLists.txt  main.cpp
src/: fsutil.cpp  graph.cpp  graph.h  main.cpp  plugin.cpp  plugininfo.cpp  pluginmanager.cpp  pluginmanagerprivate.cpp
src/private/: fsutil.h  graph.h  plugin.h  pluginmanagerprivate.h  stringutil.h  tribool.h
tests/app/: CMakeLists.txt  main.cpp
tests/app/plugin/: PluginCommon.cmake
tests/app/plugin/plugin_1/: CMakeLists.txt  main.cpp  meta.json
tests/app/plugin/plugin_10/: CMakeLists.txt  main.cpp  meta.json
tests/app/plugin/plugin_2/: CMakeLists.txt  main.cpp  meta.json
tests/app/plugin/plugin_3/: CMakeLists.txt  main.cpp  meta.json
tests/app/plugin/plugin_4/: CMakeLists.txt  main.cpp  meta.json
tests/app/plugin/plugin_5/: CMakeLists.txt  main.cpp  meta.json
tests/app/plugin/plugin_6/: CMakeLists.txt  main.cpp  meta.json
tests/app/plugin/plugin_7/: CMakeLists.txt  main.cpp  meta.json
tests/app/plugin/plugin_8/: CMakeLists.txt  main.cpp  meta.json
tests/app/plugin/plugin_9/: CMakeLists.txt  main.cpp  meta.json
tests/app/plugin/plugin_test/: CMakeLists.txt  main.cpp  meta.json
